tests/spec/emit/snapshots/capital_unicode_escape_in_char.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() -> rune {
    '\U0001F600'
  }
---
package main

func test() rune {
	return '\U0001F600'
}
