tests/spec/emit/snapshots/capital_unicode_escape_in_string.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() -> string {
    "\U0001F600"
  }
---
package main

func test() string {
	return "\U0001F600"
}
