tests/spec/emit/snapshots/cast_byte_slice_to_string.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn test() -> string {
    let bytes: Slice<byte> = "hello" as Slice<byte>;
    bytes as string
  }
---
package main

func test() string {
	bytes := ([]byte)("hello")
	return string(bytes)
}
