tests/spec/emit/snapshots/cast_constant_shift_to_float_needs_no_pin.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn scale() -> float64 {
    (2 << 3) as float64
  }
---
package main

func scale() float64 {
	return float64(2 << 3)
}
