tests/spec/emit/snapshots/cast_constant_shift_with_arithmetic_count_needs_no_pin.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn scale() -> float64 {
    (1 << (50 + 50)) as float64
  }
---
package main

func scale() float64 {
	return float64(1 << (50 + 50))
}
