tests/spec/emit/snapshots/cast_float_var_to_int.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn test() -> int {
    let f = 3.14
    f as int
  }
---
package main

func test() int {
	f := 3.14
	return int(f)
}
