tests/spec/emit/snapshots/cast_float_var_to_integer_type_alias.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  type MyInt = int
  
  fn main() {
    let f = 3.14
    let x: MyInt = f as MyInt
    let _ = x
  }
---
package main

type MyInt = int

func main() {
	f := 3.14
	x := MyInt(f)
	_ = x
}
