tests/spec/emit/snapshots/cast_in_complex_expression.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn test() -> float64 {
    let a: int = 3;
    let b: int = 4;
    let c: int = 2;
    ((a + b) as float64) / (c as float64)
  }
---
package main

func test() float64 {
	a := 3
	b := 4
	c := 2
	return float64(a+b) / float64(c)
}
