tests/spec/emit/snapshots/cast_in_statement_position_uses_discard.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn main() {
    let x = 1
    x as float64
  }
---
package main

func main() {
	x := 1
	_ = float64(x)
}
